--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "input-otp": "^1.2.4",
     "cmdk": "^1.0.0",
     "react-resizable-panels": "^2.0.20",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "react-hook-form": "^7.52.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
